--- a/Web1/Module3/fpwStage03_drehbein/css/styles.css
+++ b/Web1/Module3/fpwStage03_drehbein/css/styles.css
@@ -8,7 +8,7 @@
 
 body {
   color: #444;
-  background: rgba(88, 58, 18, .6) url(/images/bGround01.jpg) no-repeat 50% 0%;
+  background: rgba(88, 58, 18, .6) url(../images/bGround01.jpg) no-repeat 50% 0%;
   font-family: Arial, 'Rock Salt', Impact, Verdana, sans-serif;
   font-size: .875rem;
 }
@@ -104,6 +104,7 @@ img[alt$="Artilleryman - 1870"] {
 
 #bottomNav {
   background-color: #433c20;
+  margin-top: .4em;
 }
 
 #bottomNav li, 
@@ -111,4 +112,22 @@ img[alt$="Artilleryman - 1870"] {
   color: #bbb090;
   text-shadow: none;
   font-size: 1em;
+}
+
+#footerInfo {
+  /* border: 1px solid orange; */
+  margin-left: 6.25rem;
+}
+
+#footerInfo a[href^="mailto:"] {
+  float: right;
+  margin-right: .8em;
+  color: #76623c;
+  text-decoration: none;
+  font-size: larger;
+}
+
+#footerInfo a[href^="mailto:"]:hover {
+  text-decoration: underline;
+  font-weight: bolder;
 }
