--- a/Web1/Module4/fpwStage04_drehbein/css/styles.css
+++ b/Web1/Module4/fpwStage04_drehbein/css/styles.css
@@ -4,13 +4,20 @@
 * {
   margin: 0;
   padding: 0;
+  border: 0 none;
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: none;
+  outline-style: none;
+
 }
 
 body {
-  color: #444;
-  background: rgba(88, 58, 18, .6) url(../images/bGround01.jpg) no-repeat 50% 0%;
-  font-family: Arial, 'Rock Salt', Impact, Verdana, sans-serif;
-  font-size: .875rem;
+  color: #76623c;
+  background: rgba(88, 58, 18, .6) url(../images/bGround01.jpg) no-repeat center top;
+  /* font-family: Arial, 'Rock Salt', Impact, Verdana, sans-serif;
+  font-size: .875rem; */
+  font: .875rem/1.8 Arial, sans-serif;
 }
 
 .wrapper {
@@ -18,20 +25,34 @@ body {
   margin: 0 auto;
 }
 
+#top {
+  border: 1px solid red;
+  background: #463003 url(../images/bGrounds/logo_backGround.jpg) no-repeat center top;
+  /* width: 100%; */
+  height: 12.813rem;
+  /* Make this tag a positioning parent for any absolutely positioned descendants */
+  position: relative;
+  /* overflow: hidden; */
+}
+
+#artilleryPic {
+  float: right;
+}
+
+#logo1870 {
+  /* width: 17.0625rem;
+  height: 7.0625rem; */
+  position: absolute;
+  bottom: .5rem;
+  right: 4.375rem;
+}
+
 /* Select diary image  by attribute value (case insensitive because of i) */
 /* header > a > img { */
 header img[src*="diary" i] {
   /* border: 1px solid blue; */
-  float: left;
-}
-
-#logo1870 {
-  color: #76623c;
-  font-family: Papyrus, 'Rock Salt', Arial, sans-serif;
-  font-size: 8em;
-  font-weight: 300;
-  /* display: inline; */
-  margin-left: 5em;
+  position: relative;
+  top: -2rem;
 }
 
 nav ul {
