Updated discover Juneau part two according to instructor feedback; Did not resubmit

--- a/Web1/Module3/DiscoverJuneau_Part02_drehbein/css/styles.css
+++ b/Web1/Module3/DiscoverJuneau_Part02_drehbein/css/styles.css
@@ -90,6 +90,10 @@ main ul {
   list-style-type: none;
 }
 
+main .exploreOptions li {
+  line-height: .8rem;
+}
+
 main .exploreOptions li a   {
   display: inline-block;
   text-indent: 1rem;
