Participated with part one of class on October 2, 2025

--- a/Web1/Module4/fpwStage04_drehbein/css/styles.css
+++ b/Web1/Module4/fpwStage04_drehbein/css/styles.css
@@ -211,9 +211,9 @@ nav > ul {
   display: flex;
 }
 
-.historyNotes {
-  /* float: left; */
-}
+/* .historyNotes {
+  float: left;
+} */
 
 #primaryPic {
   width: 18%;
