Styled stay.html; fixed a few typos

--- a/Web1/Module5/DiscoverJuneau_Part04_drehbein/css/explore.css
+++ b/Web1/Module5/DiscoverJuneau_Part04_drehbein/css/explore.css
@@ -48,7 +48,7 @@ main .exploreOptions li a {
     text-align: left;
   }
 
-  main .exploreOptions h3 {
+  #mainContent .exploreOptions h3 {
     text-align: left;
   }
 
