--- a/Web1/Module5/IronBrigade_MobileFirstSolution_withTable_drehbein/IronBrigade_MobileFirstSolution_withTable_drehbein/css/styles.css
+++ b/Web1/Module5/IronBrigade_MobileFirstSolution_withTable_drehbein/IronBrigade_MobileFirstSolution_withTable_drehbein/css/styles.css
@@ -146,7 +146,8 @@ main > .about p {
   line-height: 1.4em;
 }
 
-main > .about a {
+main > .about a,
+main > .feedbackForm a {
   text-decoration: none;
   color: wheat;
   background-color: #293f50;
@@ -158,7 +159,8 @@ main > .about a {
   float: right;
 }
 
-main > .about a:hover {
+main > .about a:hover,
+main > .feedbackForm a:hover {
   text-decoration: underline;
 }
 
@@ -456,7 +458,8 @@ main > .about a:hover {
     color: rgb(53, 46, 46);
   }
 
-  main > .about a {
+  main > .about a,
+  main > .feedbackForm a {
     font-size: 1em;
   }
 
