--- a/Web1/Module5/DiscoverJuneau_Part04_drehbein/css/stay.css
+++ b/Web1/Module5/DiscoverJuneau_Part04_drehbein/css/stay.css
@@ -47,3 +47,56 @@ input[type="submit"] {
   border-radius: .625rem;
   margin: 1rem auto;
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 100%;
+  grid-row: 1 / 2;
+}
+
+td, th {
+  border: 1px solid #999;
+  padding: 1rem;
+  text-align: left;
+}
+
+th:first-child {
+  color: #3579b9;
+}
+
+td {
+  text-align: center;
+  font-size: 90%;
+}
+
+td > img {
+  width: 40%;
+  max-width: 100%;
+}
+
+@media screen and (min-width: 64rem) {
+  #mainContent {
+    grid-template-rows: none;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 3.75rem 0;
+    width: 100%;
+  }
+
+  .formInfo {
+    width: 100%;
+  }
+
+  #lodgingInfo {
+    margin-top: 0;
+  }
+
+  #mainContent p,
+  #mainContent form {
+    grid-column: 1 / 2;
+  }
+
+  #mainContent > table {
+    grid-column: 2 / 3;
+  }
+}
